# MLOpsini_project

./: .env_example  .gitignore  .gitlab-ci.yml  RE.md  complete_home_info.csv  dagster.yaml  docker-compose.yml  dockerfile  dockerfile_dagster  dockerfile_mlflow  pyproject.toml  readme.md
data/: db_init.sh  protodb.db  protodb.db.dvc  readme.md
docs/: system_design.drawio
models/: catboost_v1.joblib  readme.md
pipelines/: build_instance.sh  config.yml  config_avito.yml  pipeline.py  readme.md  start.sh  workspace.yaml
pipelines/ETLs/: ETL.py  config.yml
pipelines/ETLs/ops/: parse.py  (+1 more)
pipelines/featurize/: config.yml  pipeline.py  pipeline_transform.py
pipelines/ops/: parsing.py
pipelines/parse/: config.yml  pipeline.py  pipeline_parse.py
pipelines/update_models/: config.yml  model_update.py
pipelines/utils/: __init__.py  config.yml  configs.py  connections.py  utils.py
research/: readme.md  tt.ipynb
research/model/: baseline.ipynb  feature_store.ipynb  step_1.ipynb
research/parse_home_info/: get_home_info.py  get_house_adv_info.py  tt.ipynb
research/tests/: test.ipynb
research/text/: text.py  text_research.ipynb
src/: manual.py  print.py  readme.md  start.sh  system_design.drawio  workspace.yaml
src/CLI/: download.py  featurize.py  fit.py
src/ETLs/: ETL.py  config.yml
src/ML/: config.yml  update_model_pipeline.py
src/models/: mock_pipeline.py  update_model_pipeline.py
src/utils/: configs.py  loggers.py  utils.py
tests/: avito.html  cian.html  test.ipynb
tests/html_pahes/: domclick.html
utils/: connections.py  text.py  utils.py
(+14 files in other folders)
