[tool.poetry]
name = "mlopsini"
version = "0.1.0"
description = "Проект для практики MLOps подходов и проектирования систем"
authors = ["Charubaiel <aleksandrin.a@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
dagster = "^1.2.3"
duckdb = "^0.7.1"
mlflow = "^2.2.2"
numpy = "^1.24.2"
fastapi = "^0.95.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
