[tool.poetry]
name = "mlopsini"
version = "0.1.0"
description = "Проект для практики MLOps подходов и проектирования систем"
authors = ["Charubaiel <aleksandrin.a@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
dagster = "^1.2.3"
duckdb = "^0.7.1"
mlflow = "^2.2.2"
numpy = "^1.24.2"
fastapi = "^0.95.0"
dagit = "^1.2.6"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
natasha = "^1.5.0"
gensim = "^4.3.1"
tqdm = "^4.65.0"
cloudscraper = "^1.2.69"
geopy = "^2.3.0"
html5lib = "^1.1"
ipykernel = "^6.22.0"
catboost = "^1.2"
shap = "^0.41.0"
yapf = "^0.33.0"
ruff = "^0.0.265"
lightgbm = "^3.3.5"
dvc = "^2.56.0"
dagster-postgres = "^0.19.4"
boto3 = "^1.26.135"

[tool.poetry.dev-dependencies]


[style]
based_on_style = 'yapf'
spaces_before_comment = 4
split_before_logical_operator = true

[tool.yapfignore]
ignore_patterns = [
  "*.ipynb"
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
